--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^9.11.0",
+    "firebase-tools": "^11.14.1",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
